// $Id$
// $Name$

Image Picker  for D7 in DRUPAL-7--1, 20010-12-09
------------------------------------
by hutch, fixed iframe js

Image Picker  for D7 in DRUPAL-7--1, 20010-12-01
------------------------------------
by hutch, added imagepicker_variables table

Image Picker  for D7 in DRUPAL-7--1, 20010-11-30
------------------------------------
by hutch, fixed block paste

Image Picker  for D7 in DRUPAL-7--1, 20010-11-08
------------------------------------
by hutch, added date format to config

Image Picker  for D7 in DRUPAL-7--1, 20010-10-28
------------------------------------
by hutch, fixed bug in enctype in upload form

Image Picker  for D7 in DRUPAL-7--1, 20010-10-24
------------------------------------
by hutch, fixed form theming

Image Picker  for D7 in DRUPAL-7--1, 20010-10-23
------------------------------------
by hutch, fixed colorbox integration

Image Picker  for D7 in DRUPAL-7--1, 20010-10-21
------------------------------------
by hutch, fixed imports, added bulk operations, 
reworked theming, many bugfixes.

Image Picker  for D7 in DRUPAL-7--1, 20010-09-30
------------------------------------
by hutch, fixed MENU_CALLBACK, no dynamic entries allowed

Image Picker  for D7 in DRUPAL-7--1, 20010-09-21
------------------------------------
by hutch, fixed datetime bug

Image Picker  for D7 in DRUPAL-7--1, 20010-09-08
------------------------------------
by hutch, improved iframe integration 

Image Picker  for D7 in DRUPAL-7--1, 20010-09-03
------------------------------------
by hutch, fixed issue #895308, replace file_directory_path()
removed thickbox, added rows_per_page

Image Picker  for D7 in DRUPAL-7--1, 20010-07-10
------------------------------------
by hutch, minor cleanup and bugfixes to menu

Image Picker  for D7 in DRUPAL-7--1, 20010-06-13
------------------------------------
by hutch, initial release for Drupal 7

Image Picker  for D6 in DRUPAL-6--2, 20010-06-09
------------------------------------